--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
-    "mindmup-mapjs": "^2.0.3"
+    "express": "^4.15.2",
+    "mindmup-mapjs": "^2.0.3",
+    "socket.io": "^2.0.1"
   }
 }
