--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "pack-js": "webpack"
+    "pack-js": "webpack",
+    "start": "webpack; node index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
   "dependencies": {
     "express": "^4.15.2",
     "mindmup-mapjs": "^2.0.3",
+    "mysql": "^2.13.0",
     "socket.io": "^2.0.1"
   }
 }
