--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "express": "^4.15.2",
     "mindmup-mapjs": "^2.0.3",
+    "moment": "^2.18.1",
     "mysql": "^2.13.0",
     "socket.io": "^2.0.1"
   }
