--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "^0.28.1",
     "exports-loader": "^0.6.3",
     "imports-loader": "^0.7.0",
+    "style-loader": "^0.17.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
     "express": "^4.15.2",
+    "flatpickr": "^2.6.1",
     "mindmup-mapjs": "^2.0.3",
     "moment": "^2.18.1",
     "mysql": "^2.13.0",
