--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mindmup-mapjs": "^2.0.3",
     "moment": "^2.18.1",
     "mysql": "^2.13.0",
-    "socket.io": "^2.0.1"
+    "socket.io": "^2.0.1",
+    "toastr": "^2.1.2"
   }
 }
